--- a/src/index.scss
+++ b/src/index.scss
@@ -7,8 +7,18 @@ body {
   padding: 0;
 }
 
+
 #header {
+  .logo {
+    margin-top: 20px;
+    text-align: center;
+    .image-logo {
+      width: 180px;
+      height: 100px;
+    }
+  }
   ul {
+    margin-top: 15px;
     display: flex;
     justify-content: center;
     li{
