--- a/src/index.scss
+++ b/src/index.scss
@@ -1,39 +1,91 @@
 @import '../node_modules/bootstrap/scss/bootstrap';
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Srisakdi:700');
 
 body {
   font-family: 'Montserrat','sans serif';
   margin: 0px;
   padding: 0px;
+  background-color: #fffff0;
+}
+
+#social-network {
+  position: fixed;
+  right: 0;
+  width: 2.7rem;
+  padding: 10px;
+  border: 1px solid red;
+  background-color: red;
+  ul{
+    margin: 0;
+    padding: 0;
+  }
+  li {
+    text-align: center;
+    color: #eee;
+    padding: 5px;
+    list-style: none;
+    &:hover {
+      color: lightblue;
+    }
+  }
+}
+
+
+#logo {
+  margin-top: 20px;
+  text-align: center;
+  .image-logo {
+    width: 500px;
+    height: 150px;
+  }
+  .firstTitle {
+    color: darkred;
+    font-family: 'Srisakdi', serif;
+    font-weight: bold;
+    font-style: italic;
+    font-size: 3em;
+  }
+  .infos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+      h4 {
+        margin: 10px 50px;
+        padding: 10px;
+        font-size: 16px;
+        border-top: 1px solid red;
+        border-bottom: 1px solid red;
+        color: red;
+        text-transform: uppercase;
+        font-weight: bold;
+      }
+  }
 }
 
 #header {
-  margin-bottom: 20px;
-  .logo {
-    margin-top: 20px;
-    text-align: center;
-    .image-logo {
-      width: 180px;
-      height: 100px;
-    }
-  }
   nav {
     margin-top: 10px;
+    margin-bottom: 10px;
+    .navbar-link {
+      text-align: center;
+    }
     ul {
-      margin-top: 15px;
-      display: flex;
-      justify-content: center;
-        margin-right: 20px;
+      .link {
+        font-size: 16px;
         list-style: none;
-        margin-top: 10px;
-        .link {
-          padding-top: 8px;
-          color: black ;
-          transition: .5s ease-in-out;
-            &:hover {
-              color: #2e2e2e;
-              text-decoration: none;
-              border-top: 3px solid #000;
+        margin-top: 5px;
+        text-align: center;
+        margin-right: 40px;
+        color: black ;
+        text-transform: uppercase;
+        transition: .5s ease-in-out;
+          &:hover {
+            color: #eee;
+            background-color: red;
+            text-decoration: none;
+            border: 1px solid red;
+            border-radius: 3px;
         }
       }
     }
@@ -41,22 +93,54 @@ body {
 }
 
 .active {
-  background-color: #ffb74d;
-  border: 1px solid #eee;
+  border: 1px solid #ffb74d;
   border-radius: 3px;
+}
+
+#content-home {
+  display: flex;
+  margin: 15px;
+  .master-cook {
+    margin-bottom: 5px;
+    height: 530px;
+  }
+}
+
+
+
+// MEDIA QUERIES
+@media (max-width: 768px) {
+  #social-network {
+    display: none;
+  }
+
+  #logo {
+    .firstTitle {
+      font-size: 2.5em;
+    }
+    .infos {
+      display: flex;
+      flex-direction: column;
+      .image-logo {
+        margin-top: 20px;
+      }
+      .winYear {
+        display: block;
+        margin-top: 10px;
+      }
+      h4 {
+        display: none;
+      }
+    }
+  }
+
+  #content-home {
+    margin: 0;
+    .master-cook {
+      width: 100%;
+      height: 300px;
+    }
+  }
 
 }
 
-.mainTitle {
-  margin-bottom: 0;
-  padding: 20px;
-  border: 5px solid #ffb74d;
-  border-bottom: none;
-  background-color: #ffb74d;
-  text-align: center;
-  font-weight: bold;
-}
-
-.master-cook {
-  width: 100%;
-}
