--- a/src/index.scss
+++ b/src/index.scss
@@ -199,6 +199,7 @@ body {
     .card { 
       margin: 10px 30px;
       text-align: center;
+      box-shadow: 2px 2px 5px 2px lightgrey;
     }
   }
   img {
