change background Menu

--- a/src/index.scss
+++ b/src/index.scss
@@ -208,6 +208,14 @@ body {
   }
 }
 
+// Menu Page
+.content-menu {
+  background-color: #2e2e2e;
+  color: $bg-maroon;
+  h1 {
+    text-align: center;
+  }
+}
 
 
 // MEDIA QUERIES
