--- a/src/index.scss
+++ b/src/index.scss
@@ -216,6 +216,16 @@ body {
   h1 {
     text-align: center;
   }
+  .section-images {
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+    .images-menu {
+      width: 80px;
+      height: 80px;
+      margin: 5px;
+    }
+  }
 }
 
 
