--- a/src/index.scss
+++ b/src/index.scss
@@ -215,15 +215,30 @@ body {
   color: $bg-maroon;
   h1 {
     text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: underline;
   }
   .section-images {
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
-    margin: 5px;
+    .subtitles {
+      border-top: 1px solid $color-white;
+      border-bottom: 1px solid $color-white;
+      padding-top: 15px;
+      padding-bottom: 15px;
+      text-transform: uppercase;
+    }
     .images-menu {
+      text-align: center;
       width: 80px;
       height: 80px;
-      margin: 5px;
+      margin: 5px 0px 5px 0;
+    }
+    span {
+      margin-left: 15px;
+      font-weight: bold;
     }
   }
 }
