Order-Online's skeleton

--- a/src/index.scss
+++ b/src/index.scss
@@ -226,6 +226,8 @@ body {
   }
 }
 
+
+
 // Menu Page
 .content-menu {
   background-color: #2e2e2e;
@@ -261,6 +263,34 @@ body {
     }
   }
 }
+
+
+
+//Order-Online Page
+#content-order {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-auto-rows: minmax(70vh, auto);
+  background-color: #2e2e2e;
+  .left-content-order {
+    background-color: $bg-maroon;
+    border-right: 1px solid $color-white;
+    color: black;
+  }
+  .main-content-order {
+    text-align: center;
+    color: $color-white;
+  }
+  .right-content-order {
+    background-color: $bg-maroon;
+    border-left: 1px solid $color-white;
+    text-align: right;
+    color: black;
+  }
+}
+
+
+
 
 
 // Contact Page
