--- a/src/index.scss
+++ b/src/index.scss
@@ -316,7 +316,7 @@ body {
   .main-content-order {
     h3 {
       text-align: center;
-      color: $color-white;
+      color: $bg-maroon;
       margin-top: 25px;
       text-transform: uppercase;
     }
@@ -324,7 +324,7 @@ body {
       margin-top: 15px;
       h2 {
         margin: 0 20%;
-        border: 1px solid $color-white;
+        border: 1px solid $bg-maroon;
         border-radius: 5px;
         text-align: center;
         color: $color-white;
@@ -338,7 +338,7 @@ body {
     }
     .bar-horizontal {
       margin: 0 150px;
-      border-bottom: 1px solid $color-white;
+      border-bottom: 1px solid $bg-maroon;
     }
     .bar-horizontal2{
       margin: 0 150px;
@@ -350,16 +350,6 @@ body {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      // padding: 0 15x;
-      // h4 {
-      //   text-align: center;
-      //   text-transform: uppercase;
-      //   text-decoration: underline;
-      // }
-      // .name-price-items {
-      //   display: flex;
-      //   justify-content: space-between;
-      // }
       span {
         text-align: right;
         color: $bg-maroon;
