color item's price changed

--- a/src/index.scss
+++ b/src/index.scss
@@ -547,9 +547,7 @@ body {
     }
     #cart-order {
       height: 50vh;
-      // position: fixed;
-      // bottom: 0;
-      // background-color: $bg-maroon;
+      margin-bottom: 20px;
     }
   }
 
