--- a/src/index.scss
+++ b/src/index.scss
@@ -400,6 +400,7 @@ body {
     font-weight: bold;
   }
   .row {
+    padding-bottom: 20px;
     #infos {
       background-color: $bg-maroon;
       color: $color-white;
@@ -461,7 +462,7 @@ body {
 
 
 .footer {
-  padding: 10px;
+  padding: 5px;
   text-align: center;
   background-color: #97642F;
   color: $color-white;
