HashRouter and NavLink activeStyle

--- a/src/index.scss
+++ b/src/index.scss
@@ -113,10 +113,10 @@ body {
   }
 }
 
-.active {
-  border: 1px solid #ffb74d;
-  border-radius: 3px;
-}
+// .active {
+//   border: 1px solid #ffb74d;
+//   border-radius: 3px;
+// }
 
 .col-sm {
   padding: 0;
